# FYS5429-GPT2

./: .gitignore  README.md  get_alphaca_data.py  gpt2_assistant.py  gpt2_gradio.py  gpt2_m_fine-tuned.ipynb  pyproject.toml  requirements.txt
more_fine-tuning/: llama_queries.py  xtra_fine-tuning.py
src/my_gpt2/: Datasets.py  __init__.py  dataloaders.py  gpt2.py  gpt2_eval_utils.py  gpt_download_utils.py  gpt_utils.py  plotting.py  text_generation.py  text_processing.py
src/my_gpt2.egg-info/: PKG-INFO
src/my_gpt2/llm.egg-info/: PKG-INFO
